parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOSPTS

Grammar

Rule 0     S' -> program
Rule 1     program -> PRO ID r_register_global PTOCOM opvars opfunciones MAIN PARIZQ PARDER bloque
Rule 2     opvars -> vars
Rule 3     opvars -> empty
Rule 4     opfunciones -> funciones opfunciones
Rule 5     opfunciones -> empty
Rule 6     vars -> VARTOKEN tipo ID r_register_variable_name arr arr varciclo PTOCOM tipociclo
Rule 7     varciclo -> COMA ID r_register_variable_name arr arr varciclo
Rule 8     varciclo -> empty
Rule 9     arr -> CORIZQ CTEI CORDER
Rule 10    arr -> empty
Rule 11    tipociclo -> tipo opciontipo
Rule 12    tipociclo -> empty
Rule 13    opciontipo -> ID r_register_variable_name arr arr varciclo PTOCOM tipociclo
Rule 14    opciontipo -> MODULE ID PARIZQ opcionvarsimple PARDER opvars bloquefunc
Rule 15    tipo -> INT r_register_variable_type
Rule 16    tipo -> FLT r_register_variable_type
Rule 17    tipo -> CHAR r_register_variable_type
Rule 18    tipo_func -> INT r_register_function
Rule 19    tipo_func -> FLT r_register_function
Rule 20    tipo_func -> CHAR r_register_function
Rule 21    varsimple -> tipo ident
Rule 22    funciones -> funcionvoid
Rule 23    funciones -> funcion
Rule 24    funcionvoid -> VOID r_register_function MODULE ID r_update_curr_function_name PARIZQ opcionvarsimple PARDER opvars bloque
Rule 25    opcionvarsimple -> varsimple ciclovarsimple
Rule 26    opcionvarsimple -> empty
Rule 27    ciclovarsimple -> COMA varsimple ciclovarsimple
Rule 28    ciclovarsimple -> empty
Rule 29    funcion -> tipo_func MODULE ID r_update_curr_function_name PARIZQ opcionvarsimple PARDER opvars bloquefunc
Rule 30    ident -> ID arrini arrini
Rule 31    arrini -> CORIZQ CORDER
Rule 32    arrini -> empty
Rule 33    bloque -> KEYIZQ bloqueopcion KEYDER
Rule 34    bloqueopcion -> estatuto bloqueopcion
Rule 35    bloqueopcion -> empty
Rule 36    bloquefunc -> KEYIZQ bloqueopcionfunc KEYDER
Rule 37    bloqueopcionfunc -> estatutofunc bloqueopcionfunc
Rule 38    bloqueopcionfunc -> empty
Rule 39    estatuto -> asignacion
Rule 40    estatuto -> decision
Rule 41    estatuto -> escritura
Rule 42    estatuto -> llamadafunc
Rule 43    estatuto -> repeticion
Rule 44    estatuto -> lectura
Rule 45    estatutofunc -> asignacion
Rule 46    estatutofunc -> decisionfunc
Rule 47    estatutofunc -> escritura
Rule 48    estatutofunc -> llamadafunc
Rule 49    estatutofunc -> repeticionfunc
Rule 50    estatutofunc -> lectura
Rule 51    estatutofunc -> RETURN PARIZQ expresion PARDER PTOCOM
Rule 52    asignacion -> ID r_verifica_variable_existe r_pila_operandos_push asignacionarr asignacionarr IGU r_pila_operadores_push_igu expresion r_pop_igu PTOCOM
Rule 53    asignacionarr -> CORIZQ expresion CORDER
Rule 54    asignacionarr -> empty
Rule 55    expresion -> exp r_pop_comp expresionsig
Rule 56    expresionsig -> MAY r_pila_operadores_push_may expresionsigequal expresion
Rule 57    expresionsig -> MEN r_pila_operadores_push_men expresionsigequal expresion
Rule 58    expresionsig -> DIF r_pila_operadores_push_dif expresion
Rule 59    expresionsig -> IGUIGU r_pila_operadores_push_iguigu expresion
Rule 60    expresionsig -> AND r_pila_operadores_push_and expresion
Rule 61    expresionsig -> OR r_pila_operadores_push_or expresion
Rule 62    expresionsig -> empty
Rule 63    expresionsigequal -> IGU
Rule 64    expresionsigequal -> empty
Rule 65    exp -> termino r_pop_mas expciclo
Rule 66    expciclo -> MAS r_pila_operadores_push_mas exp
Rule 67    expciclo -> MENOS r_pila_operadores_push_menos exp
Rule 68    expciclo -> empty
Rule 69    termino -> factor r_pop_mult factorciclo
Rule 70    factorciclo -> MULT r_pila_operadores_push_mult termino
Rule 71    factorciclo -> DIV r_pila_operadores_push_div termino
Rule 72    factorciclo -> empty
Rule 73    factor -> PARIZQ expresion PARDER
Rule 74    factor -> masomenos varcte
Rule 75    factor -> ID r_verifica_variable_existe r_pila_operandos_push opcionid
Rule 76    masomenos -> MAS
Rule 77    masomenos -> MENOS
Rule 78    masomenos -> empty
Rule 79    opcionid -> arrexp arrexp
Rule 80    opcionid -> PARIZQ parametros PARDER
Rule 81    varcte -> iddim
Rule 82    varcte -> CTEI r_pila_operandos_push_cte_int
Rule 83    varcte -> CTEF r_pila_operandos_push_cte_flt
Rule 84    parametros -> expresion cicloparametros
Rule 85    parametros -> empty
Rule 86    cicloparametros -> COMA expresion cicloparametros
Rule 87    cicloparametros -> empty
Rule 88    decision -> IF PARIZQ expresion PARDER r_if_paso_1 THEN bloque ELSE r_if_paso_2 bloque r_if_paso_3
Rule 89    escritura -> WRITE PARIZQ escrituraciclo otro PARDER PTOCOM
Rule 90    escrituraciclo -> CTE_STRING
Rule 91    escrituraciclo -> expresion
Rule 92    otro -> COMA escrituraciclo otro
Rule 93    otro -> empty
Rule 94    llamadafunc -> ID PARIZQ parametros PARDER PTOCOM
Rule 95    lectura -> READ PARIZQ iddim ciclodim PARDER PTOCOM
Rule 96    ciclodim -> COMA iddim ciclodim
Rule 97    ciclodim -> empty
Rule 98    iddim -> ID r_verifica_variable_existe r_pila_operandos_push arrexp arrexp
Rule 99    arrexp -> CORIZQ expresion CORDER
Rule 100   arrexp -> empty
Rule 101   repeticion -> condicional
Rule 102   repeticion -> nocondicional
Rule 103   condicional -> WHILE r_while_paso_1 PARIZQ expresion PARDER r_while_paso_2 DO bloque r_while_paso_3
Rule 104   nocondicional -> FOR iddim IGU r_pila_operadores_push_igu expresion TO r_pop_igu_for expresion r_for_paso_1 DO bloque r_for_paso_2
Rule 105   decisionfunc -> IF PARIZQ expresion PARDER THEN bloquefunc ELSE bloquefunc
Rule 106   repeticionfunc -> condicionalfunc
Rule 107   repeticionfunc -> nocondicionalfunc
Rule 108   condicionalfunc -> WHILE PARIZQ expresion PARDER DO bloquefunc
Rule 109   nocondicionalfunc -> FOR iddim IGU expresion TO expresion DO bloquefunc
Rule 110   empty -> <empty>
Rule 111   r_register_global -> <empty>
Rule 112   r_register_function -> <empty>
Rule 113   r_update_curr_function_name -> <empty>
Rule 114   r_register_variable_type -> <empty>
Rule 115   r_register_variable_name -> <empty>
Rule 116   r_verifica_variable_existe -> <empty>
Rule 117   r_if_paso_1 -> <empty>
Rule 118   r_if_paso_2 -> <empty>
Rule 119   r_if_paso_3 -> <empty>
Rule 120   r_while_paso_1 -> <empty>
Rule 121   r_while_paso_2 -> <empty>
Rule 122   r_while_paso_3 -> <empty>
Rule 123   r_pop_igu_for -> <empty>
Rule 124   r_for_paso_1 -> <empty>
Rule 125   r_for_paso_2 -> <empty>
Rule 126   r_pila_operandos_push -> <empty>
Rule 127   r_pila_operandos_push_cte_int -> <empty>
Rule 128   r_pila_operandos_push_cte_flt -> <empty>
Rule 129   r_pop_mult -> <empty>
Rule 130   r_pop_mas -> <empty>
Rule 131   r_pop_comp -> <empty>
Rule 132   r_pop_igu -> <empty>
Rule 133   r_pila_operadores_push_mult -> <empty>
Rule 134   r_pila_operadores_push_div -> <empty>
Rule 135   r_pila_operadores_push_mas -> <empty>
Rule 136   r_pila_operadores_push_menos -> <empty>
Rule 137   r_pila_operadores_push_may -> <empty>
Rule 138   r_pila_operadores_push_men -> <empty>
Rule 139   r_pila_operadores_push_dif -> <empty>
Rule 140   r_pila_operadores_push_iguigu -> <empty>
Rule 141   r_pila_operadores_push_and -> <empty>
Rule 142   r_pila_operadores_push_or -> <empty>
Rule 143   r_pila_operadores_push_igu -> <empty>

Terminals, with rules where they appear

AND                  : 60
CHAR                 : 17 20
COMA                 : 7 27 86 92 96
CORDER               : 9 31 53 99
CORIZQ               : 9 31 53 99
CTEF                 : 83
CTEI                 : 9 82
CTE_STRING           : 90
DIF                  : 58
DIV                  : 71
DO                   : 103 104 108 109
DOSPTS               : 
ELSE                 : 88 105
FLT                  : 16 19
FOR                  : 104 109
ID                   : 1 6 7 13 14 24 29 30 52 75 94 98
IF                   : 88 105
IGU                  : 52 63 104 109
IGUIGU               : 59
INT                  : 15 18
KEYDER               : 33 36
KEYIZQ               : 33 36
MAIN                 : 1
MAS                  : 66 76
MAY                  : 56
MEN                  : 57
MENOS                : 67 77
MODULE               : 14 24 29
MULT                 : 70
OR                   : 61
PARDER               : 1 14 24 29 51 73 80 88 89 94 95 103 105 108
PARIZQ               : 1 14 24 29 51 73 80 88 89 94 95 103 105 108
PRO                  : 1
PTOCOM               : 1 6 13 51 52 89 94 95
READ                 : 95
RETURN               : 51
THEN                 : 88 105
TO                   : 104 109
VARTOKEN             : 6
VOID                 : 24
WHILE                : 103 108
WRITE                : 89
error                : 

Nonterminals, with rules where they appear

arr                  : 6 6 7 7 13 13
arrexp               : 79 79 98 98
arrini               : 30 30
asignacion           : 39 45
asignacionarr        : 52 52
bloque               : 1 24 88 88 103 104
bloquefunc           : 14 29 105 105 108 109
bloqueopcion         : 33 34
bloqueopcionfunc     : 36 37
ciclodim             : 95 96
cicloparametros      : 84 86
ciclovarsimple       : 25 27
condicional          : 101
condicionalfunc      : 106
decision             : 40
decisionfunc         : 46
empty                : 3 5 8 10 12 26 28 32 35 38 54 62 64 68 72 78 85 87 93 97 100
escritura            : 41 47
escrituraciclo       : 89 92
estatuto             : 34
estatutofunc         : 37
exp                  : 55 66 67
expciclo             : 65
expresion            : 51 52 53 56 57 58 59 60 61 73 84 86 88 91 99 103 104 104 105 108 109 109
expresionsig         : 55
expresionsigequal    : 56 57
factor               : 69
factorciclo          : 69
funcion              : 23
funciones            : 4
funcionvoid          : 22
iddim                : 81 95 96 104 109
ident                : 21
lectura              : 44 50
llamadafunc          : 42 48
masomenos            : 74
nocondicional        : 102
nocondicionalfunc    : 107
opcionid             : 75
opciontipo           : 11
opcionvarsimple      : 14 24 29
opfunciones          : 1 4
opvars               : 1 14 24 29
otro                 : 89 92
parametros           : 80 94
program              : 0
r_for_paso_1         : 104
r_for_paso_2         : 104
r_if_paso_1          : 88
r_if_paso_2          : 88
r_if_paso_3          : 88
r_pila_operadores_push_and : 60
r_pila_operadores_push_dif : 58
r_pila_operadores_push_div : 71
r_pila_operadores_push_igu : 52 104
r_pila_operadores_push_iguigu : 59
r_pila_operadores_push_mas : 66
r_pila_operadores_push_may : 56
r_pila_operadores_push_men : 57
r_pila_operadores_push_menos : 67
r_pila_operadores_push_mult : 70
r_pila_operadores_push_or : 61
r_pila_operandos_push : 52 75 98
r_pila_operandos_push_cte_flt : 83
r_pila_operandos_push_cte_int : 82
r_pop_comp           : 55
r_pop_igu            : 52
r_pop_igu_for        : 104
r_pop_mas            : 65
r_pop_mult           : 69
r_register_function  : 18 19 20 24
r_register_global    : 1
r_register_variable_name : 6 7 13
r_register_variable_type : 15 16 17
r_update_curr_function_name : 24 29
r_verifica_variable_existe : 52 75 98
r_while_paso_1       : 103
r_while_paso_2       : 103
r_while_paso_3       : 103
repeticion           : 43
repeticionfunc       : 49
termino              : 65 70 71
tipo                 : 6 11 21
tipo_func            : 29
tipociclo            : 6 13
varciclo             : 6 7 13
varcte               : 74
vars                 : 2
varsimple            : 25 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PRO ID r_register_global PTOCOM opvars opfunciones MAIN PARIZQ PARDER bloque

    PRO             shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PRO . ID r_register_global PTOCOM opvars opfunciones MAIN PARIZQ PARDER bloque

    ID              shift and go to state 3


state 3

    (1) program -> PRO ID . r_register_global PTOCOM opvars opfunciones MAIN PARIZQ PARDER bloque
    (111) r_register_global -> .

    PTOCOM          reduce using rule 111 (r_register_global -> .)

    r_register_global              shift and go to state 4

state 4

    (1) program -> PRO ID r_register_global . PTOCOM opvars opfunciones MAIN PARIZQ PARDER bloque

    PTOCOM          shift and go to state 5


state 5

    (1) program -> PRO ID r_register_global PTOCOM . opvars opfunciones MAIN PARIZQ PARDER bloque
    (2) opvars -> . vars
    (3) opvars -> . empty
    (6) vars -> . VARTOKEN tipo ID r_register_variable_name arr arr varciclo PTOCOM tipociclo
    (110) empty -> .

    VARTOKEN        shift and go to state 9
    VOID            reduce using rule 110 (empty -> .)
    INT             reduce using rule 110 (empty -> .)
    FLT             reduce using rule 110 (empty -> .)
    CHAR            reduce using rule 110 (empty -> .)
    MAIN            reduce using rule 110 (empty -> .)

    opvars                         shift and go to state 6
    vars                           shift and go to state 7
    empty                          shift and go to state 8

state 6

    (1) program -> PRO ID r_register_global PTOCOM opvars . opfunciones MAIN PARIZQ PARDER bloque
    (4) opfunciones -> . funciones opfunciones
    (5) opfunciones -> . empty
    (22) funciones -> . funcionvoid
    (23) funciones -> . funcion
    (110) empty -> .
    (24) funcionvoid -> . VOID r_register_function MODULE ID r_update_curr_function_name PARIZQ opcionvarsimple PARDER opvars bloque
    (29) funcion -> . tipo_func MODULE ID r_update_curr_function_name PARIZQ opcionvarsimple PARDER opvars bloquefunc
    (18) tipo_func -> . INT r_register_function
    (19) tipo_func -> . FLT r_register_function
    (20) tipo_func -> . CHAR r_register_function

    MAIN            reduce using rule 110 (empty -> .)
    VOID            shift and go to state 15
    INT             shift and go to state 17
    FLT             shift and go to state 18
    CHAR            shift and go to state 19

    opfunciones                    shift and go to state 10
    funciones                      shift and go to state 11
    empty                          shift and go to state 12
    funcionvoid                    shift and go to state 13
    funcion                        shift and go to state 14
    tipo_func                      shift and go to state 16

state 7

    (2) opvars -> vars .

    VOID            reduce using rule 2 (opvars -> vars .)
    INT             reduce using rule 2 (opvars -> vars .)
    FLT             reduce using rule 2 (opvars -> vars .)
    CHAR            reduce using rule 2 (opvars -> vars .)
    MAIN            reduce using rule 2 (opvars -> vars .)
    KEYIZQ          reduce using rule 2 (opvars -> vars .)


state 8

    (3) opvars -> empty .

    VOID            reduce using rule 3 (opvars -> empty .)
    INT             reduce using rule 3 (opvars -> empty .)
    FLT             reduce using rule 3 (opvars -> empty .)
    CHAR            reduce using rule 3 (opvars -> empty .)
    MAIN            reduce using rule 3 (opvars -> empty .)
    KEYIZQ          reduce using rule 3 (opvars -> empty .)


state 9

    (6) vars -> VARTOKEN . tipo ID r_register_variable_name arr arr varciclo PTOCOM tipociclo
    (15) tipo -> . INT r_register_variable_type
    (16) tipo -> . FLT r_register_variable_type
    (17) tipo -> . CHAR r_register_variable_type

    INT             shift and go to state 21
    FLT             shift and go to state 22
    CHAR            shift and go to state 23

    tipo                           shift and go to state 20

state 10

    (1) program -> PRO ID r_register_global PTOCOM opvars opfunciones . MAIN PARIZQ PARDER bloque

    MAIN            shift and go to state 24


state 11

    (4) opfunciones -> funciones . opfunciones
    (4) opfunciones -> . funciones opfunciones
    (5) opfunciones -> . empty
    (22) funciones -> . funcionvoid
    (23) funciones -> . funcion
    (110) empty -> .
    (24) funcionvoid -> . VOID r_register_function MODULE ID r_update_curr_function_name PARIZQ opcionvarsimple PARDER opvars bloque
    (29) funcion -> . tipo_func MODULE ID r_update_curr_function_name PARIZQ opcionvarsimple PARDER opvars bloquefunc
    (18) tipo_func -> . INT r_register_function
    (19) tipo_func -> . FLT r_register_function
    (20) tipo_func -> . CHAR r_register_function

    MAIN            reduce using rule 110 (empty -> .)
    VOID            shift and go to state 15
    INT             shift and go to state 17
    FLT             shift and go to state 18
    CHAR            shift and go to state 19

    funciones                      shift and go to state 11
    opfunciones                    shift and go to state 25
    empty                          shift and go to state 12
    funcionvoid                    shift and go to state 13
    funcion                        shift and go to state 14
    tipo_func                      shift and go to state 16

state 12

    (5) opfunciones -> empty .

    MAIN            reduce using rule 5 (opfunciones -> empty .)


state 13

    (22) funciones -> funcionvoid .

    VOID            reduce using rule 22 (funciones -> funcionvoid .)
    INT             reduce using rule 22 (funciones -> funcionvoid .)
    FLT             reduce using rule 22 (funciones -> funcionvoid .)
    CHAR            reduce using rule 22 (funciones -> funcionvoid .)
    MAIN            reduce using rule 22 (funciones -> funcionvoid .)


state 14

    (23) funciones -> funcion .

    VOID            reduce using rule 23 (funciones -> funcion .)
    INT             reduce using rule 23 (funciones -> funcion .)
    FLT             reduce using rule 23 (funciones -> funcion .)
    CHAR            reduce using rule 23 (funciones -> funcion .)
    MAIN            reduce using rule 23 (funciones -> funcion .)


state 15

    (24) funcionvoid -> VOID . r_register_function MODULE ID r_update_curr_function_name PARIZQ opcionvarsimple PARDER opvars bloque
    (112) r_register_function -> .

    MODULE          reduce using rule 112 (r_register_function -> .)

    r_register_function            shift and go to state 26

state 16

    (29) funcion -> tipo_func . MODULE ID r_update_curr_function_name PARIZQ opcionvarsimple PARDER opvars bloquefunc

    MODULE          shift and go to state 27


state 17

    (18) tipo_func -> INT . r_register_function
    (112) r_register_function -> .

    MODULE          reduce using rule 112 (r_register_function -> .)

    r_register_function            shift and go to state 28

state 18

    (19) tipo_func -> FLT . r_register_function
    (112) r_register_function -> .

    MODULE          reduce using rule 112 (r_register_function -> .)

    r_register_function            shift and go to state 29

state 19

    (20) tipo_func -> CHAR . r_register_function
    (112) r_register_function -> .

    MODULE          reduce using rule 112 (r_register_function -> .)

    r_register_function            shift and go to state 30

state 20

    (6) vars -> VARTOKEN tipo . ID r_register_variable_name arr arr varciclo PTOCOM tipociclo

    ID              shift and go to state 31


state 21

    (15) tipo -> INT . r_register_variable_type
    (114) r_register_variable_type -> .

    ID              reduce using rule 114 (r_register_variable_type -> .)
    MODULE          reduce using rule 114 (r_register_variable_type -> .)

    r_register_variable_type       shift and go to state 32

state 22

    (16) tipo -> FLT . r_register_variable_type
    (114) r_register_variable_type -> .

    ID              reduce using rule 114 (r_register_variable_type -> .)
    MODULE          reduce using rule 114 (r_register_variable_type -> .)

    r_register_variable_type       shift and go to state 33

state 23

    (17) tipo -> CHAR . r_register_variable_type
    (114) r_register_variable_type -> .

    ID              reduce using rule 114 (r_register_variable_type -> .)
    MODULE          reduce using rule 114 (r_register_variable_type -> .)

    r_register_variable_type       shift and go to state 34

state 24

    (1) program -> PRO ID r_register_global PTOCOM opvars opfunciones MAIN . PARIZQ PARDER bloque

    PARIZQ          shift and go to state 35


state 25

    (4) opfunciones -> funciones opfunciones .

    MAIN            reduce using rule 4 (opfunciones -> funciones opfunciones .)


state 26

    (24) funcionvoid -> VOID r_register_function . MODULE ID r_update_curr_function_name PARIZQ opcionvarsimple PARDER opvars bloque

    MODULE          shift and go to state 36


state 27

    (29) funcion -> tipo_func MODULE . ID r_update_curr_function_name PARIZQ opcionvarsimple PARDER opvars bloquefunc

    ID              shift and go to state 37


state 28

    (18) tipo_func -> INT r_register_function .

    MODULE          reduce using rule 18 (tipo_func -> INT r_register_function .)


state 29

    (19) tipo_func -> FLT r_register_function .

    MODULE          reduce using rule 19 (tipo_func -> FLT r_register_function .)


state 30

    (20) tipo_func -> CHAR r_register_function .

    MODULE          reduce using rule 20 (tipo_func -> CHAR r_register_function .)


state 31

    (6) vars -> VARTOKEN tipo ID . r_register_variable_name arr arr varciclo PTOCOM tipociclo
    (115) r_register_variable_name -> .

    CORIZQ          reduce using rule 115 (r_register_variable_name -> .)
    COMA            reduce using rule 115 (r_register_variable_name -> .)
    PTOCOM          reduce using rule 115 (r_register_variable_name -> .)

    r_register_variable_name       shift and go to state 38

state 32

    (15) tipo -> INT r_register_variable_type .

    ID              reduce using rule 15 (tipo -> INT r_register_variable_type .)
    MODULE          reduce using rule 15 (tipo -> INT r_register_variable_type .)


state 33

    (16) tipo -> FLT r_register_variable_type .

    ID              reduce using rule 16 (tipo -> FLT r_register_variable_type .)
    MODULE          reduce using rule 16 (tipo -> FLT r_register_variable_type .)


state 34

    (17) tipo -> CHAR r_register_variable_type .

    ID              reduce using rule 17 (tipo -> CHAR r_register_variable_type .)
    MODULE          reduce using rule 17 (tipo -> CHAR r_register_variable_type .)


state 35

    (1) program -> PRO ID r_register_global PTOCOM opvars opfunciones MAIN PARIZQ . PARDER bloque

    PARDER          shift and go to state 39


state 36

    (24) funcionvoid -> VOID r_register_function MODULE . ID r_update_curr_function_name PARIZQ opcionvarsimple PARDER opvars bloque

    ID              shift and go to state 40


state 37

    (29) funcion -> tipo_func MODULE ID . r_update_curr_function_name PARIZQ opcionvarsimple PARDER opvars bloquefunc
    (113) r_update_curr_function_name -> .

    PARIZQ          reduce using rule 113 (r_update_curr_function_name -> .)

    r_update_curr_function_name    shift and go to state 41

state 38

    (6) vars -> VARTOKEN tipo ID r_register_variable_name . arr arr varciclo PTOCOM tipociclo
    (9) arr -> . CORIZQ CTEI CORDER
    (10) arr -> . empty
    (110) empty -> .

  ! shift/reduce conflict for CORIZQ resolved as shift
    CORIZQ          shift and go to state 43
    COMA            reduce using rule 110 (empty -> .)
    PTOCOM          reduce using rule 110 (empty -> .)

  ! CORIZQ          [ reduce using rule 110 (empty -> .) ]

    arr                            shift and go to state 42
    empty                          shift and go to state 44

state 39

    (1) program -> PRO ID r_register_global PTOCOM opvars opfunciones MAIN PARIZQ PARDER . bloque
    (33) bloque -> . KEYIZQ bloqueopcion KEYDER

    KEYIZQ          shift and go to state 46

    bloque                         shift and go to state 45

state 40

    (24) funcionvoid -> VOID r_register_function MODULE ID . r_update_curr_function_name PARIZQ opcionvarsimple PARDER opvars bloque
    (113) r_update_curr_function_name -> .

    PARIZQ          reduce using rule 113 (r_update_curr_function_name -> .)

    r_update_curr_function_name    shift and go to state 47

state 41

    (29) funcion -> tipo_func MODULE ID r_update_curr_function_name . PARIZQ opcionvarsimple PARDER opvars bloquefunc

    PARIZQ          shift and go to state 48


state 42

    (6) vars -> VARTOKEN tipo ID r_register_variable_name arr . arr varciclo PTOCOM tipociclo
    (9) arr -> . CORIZQ CTEI CORDER
    (10) arr -> . empty
    (110) empty -> .

    CORIZQ          shift and go to state 43
    COMA            reduce using rule 110 (empty -> .)
    PTOCOM          reduce using rule 110 (empty -> .)

    arr                            shift and go to state 49
    empty                          shift and go to state 44

state 43

    (9) arr -> CORIZQ . CTEI CORDER

    CTEI            shift and go to state 50


state 44

    (10) arr -> empty .

    CORIZQ          reduce using rule 10 (arr -> empty .)
    COMA            reduce using rule 10 (arr -> empty .)
    PTOCOM          reduce using rule 10 (arr -> empty .)


state 45

    (1) program -> PRO ID r_register_global PTOCOM opvars opfunciones MAIN PARIZQ PARDER bloque .

    $end            reduce using rule 1 (program -> PRO ID r_register_global PTOCOM opvars opfunciones MAIN PARIZQ PARDER bloque .)


state 46

    (33) bloque -> KEYIZQ . bloqueopcion KEYDER
    (34) bloqueopcion -> . estatuto bloqueopcion
    (35) bloqueopcion -> . empty
    (39) estatuto -> . asignacion
    (40) estatuto -> . decision
    (41) estatuto -> . escritura
    (42) estatuto -> . llamadafunc
    (43) estatuto -> . repeticion
    (44) estatuto -> . lectura
    (110) empty -> .
    (52) asignacion -> . ID r_verifica_variable_existe r_pila_operandos_push asignacionarr asignacionarr IGU r_pila_operadores_push_igu expresion r_pop_igu PTOCOM
    (88) decision -> . IF PARIZQ expresion PARDER r_if_paso_1 THEN bloque ELSE r_if_paso_2 bloque r_if_paso_3
    (89) escritura -> . WRITE PARIZQ escrituraciclo otro PARDER PTOCOM
    (94) llamadafunc -> . ID PARIZQ parametros PARDER PTOCOM
    (101) repeticion -> . condicional
    (102) repeticion -> . nocondicional
    (95) lectura -> . READ PARIZQ iddim ciclodim PARDER PTOCOM
    (103) condicional -> . WHILE r_while_paso_1 PARIZQ expresion PARDER r_while_paso_2 DO bloque r_while_paso_3
    (104) nocondicional -> . FOR iddim IGU r_pila_operadores_push_igu expresion TO r_pop_igu_for expresion r_for_paso_1 DO bloque r_for_paso_2

    KEYDER          reduce using rule 110 (empty -> .)
    ID              shift and go to state 60
    IF              shift and go to state 61
    WRITE           shift and go to state 62
    READ            shift and go to state 65
    WHILE           shift and go to state 66
    FOR             shift and go to state 67

    bloqueopcion                   shift and go to state 51
    estatuto                       shift and go to state 52
    empty                          shift and go to state 53
    asignacion                     shift and go to state 54
    decision                       shift and go to state 55
    escritura                      shift and go to state 56
    llamadafunc                    shift and go to state 57
    repeticion                     shift and go to state 58
    lectura                        shift and go to state 59
    condicional                    shift and go to state 63
    nocondicional                  shift and go to state 64

state 47

    (24) funcionvoid -> VOID r_register_function MODULE ID r_update_curr_function_name . PARIZQ opcionvarsimple PARDER opvars bloque

    PARIZQ          shift and go to state 68


state 48

    (29) funcion -> tipo_func MODULE ID r_update_curr_function_name PARIZQ . opcionvarsimple PARDER opvars bloquefunc
    (25) opcionvarsimple -> . varsimple ciclovarsimple
    (26) opcionvarsimple -> . empty
    (21) varsimple -> . tipo ident
    (110) empty -> .
    (15) tipo -> . INT r_register_variable_type
    (16) tipo -> . FLT r_register_variable_type
    (17) tipo -> . CHAR r_register_variable_type

    PARDER          reduce using rule 110 (empty -> .)
    INT             shift and go to state 21
    FLT             shift and go to state 22
    CHAR            shift and go to state 23

    opcionvarsimple                shift and go to state 69
    varsimple                      shift and go to state 70
    empty                          shift and go to state 71
    tipo                           shift and go to state 72

state 49

    (6) vars -> VARTOKEN tipo ID r_register_variable_name arr arr . varciclo PTOCOM tipociclo
    (7) varciclo -> . COMA ID r_register_variable_name arr arr varciclo
    (8) varciclo -> . empty
    (110) empty -> .

    COMA            shift and go to state 74
    PTOCOM          reduce using rule 110 (empty -> .)

    varciclo                       shift and go to state 73
    empty                          shift and go to state 75

state 50

    (9) arr -> CORIZQ CTEI . CORDER

    CORDER          shift and go to state 76


state 51

    (33) bloque -> KEYIZQ bloqueopcion . KEYDER

    KEYDER          shift and go to state 77


state 52

    (34) bloqueopcion -> estatuto . bloqueopcion
    (34) bloqueopcion -> . estatuto bloqueopcion
    (35) bloqueopcion -> . empty
    (39) estatuto -> . asignacion
    (40) estatuto -> . decision
    (41) estatuto -> . escritura
    (42) estatuto -> . llamadafunc
    (43) estatuto -> . repeticion
    (44) estatuto -> . lectura
    (110) empty -> .
    (52) asignacion -> . ID r_verifica_variable_existe r_pila_operandos_push asignacionarr asignacionarr IGU r_pila_operadores_push_igu expresion r_pop_igu PTOCOM
    (88) decision -> . IF PARIZQ expresion PARDER r_if_paso_1 THEN bloque ELSE r_if_paso_2 bloque r_if_paso_3
    (89) escritura -> . WRITE PARIZQ escrituraciclo otro PARDER PTOCOM
    (94) llamadafunc -> . ID PARIZQ parametros PARDER PTOCOM
    (101) repeticion -> . condicional
    (102) repeticion -> . nocondicional
    (95) lectura -> . READ PARIZQ iddim ciclodim PARDER PTOCOM
    (103) condicional -> . WHILE r_while_paso_1 PARIZQ expresion PARDER r_while_paso_2 DO bloque r_while_paso_3
    (104) nocondicional -> . FOR iddim IGU r_pila_operadores_push_igu expresion TO r_pop_igu_for expresion r_for_paso_1 DO bloque r_for_paso_2

    KEYDER          reduce using rule 110 (empty -> .)
    ID              shift and go to state 60
    IF              shift and go to state 61
    WRITE           shift and go to state 62
    READ            shift and go to state 65
    WHILE           shift and go to state 66
    FOR             shift and go to state 67

    estatuto                       shift and go to state 52
    bloqueopcion                   shift and go to state 78
    empty                          shift and go to state 53
    asignacion                     shift and go to state 54
    decision                       shift and go to state 55
    escritura                      shift and go to state 56
    llamadafunc                    shift and go to state 57
    repeticion                     shift and go to state 58
    lectura                        shift and go to state 59
    condicional                    shift and go to state 63
    nocondicional                  shift and go to state 64

state 53

    (35) bloqueopcion -> empty .

    KEYDER          reduce using rule 35 (bloqueopcion -> empty .)


state 54

    (39) estatuto -> asignacion .

    ID              reduce using rule 39 (estatuto -> asignacion .)
    IF              reduce using rule 39 (estatuto -> asignacion .)
    WRITE           reduce using rule 39 (estatuto -> asignacion .)
    READ            reduce using rule 39 (estatuto -> asignacion .)
    WHILE           reduce using rule 39 (estatuto -> asignacion .)
    FOR             reduce using rule 39 (estatuto -> asignacion .)
    KEYDER          reduce using rule 39 (estatuto -> asignacion .)


state 55

    (40) estatuto -> decision .

    ID              reduce using rule 40 (estatuto -> decision .)
    IF              reduce using rule 40 (estatuto -> decision .)
    WRITE           reduce using rule 40 (estatuto -> decision .)
    READ            reduce using rule 40 (estatuto -> decision .)
    WHILE           reduce using rule 40 (estatuto -> decision .)
    FOR             reduce using rule 40 (estatuto -> decision .)
    KEYDER          reduce using rule 40 (estatuto -> decision .)


state 56

    (41) estatuto -> escritura .

    ID              reduce using rule 41 (estatuto -> escritura .)
    IF              reduce using rule 41 (estatuto -> escritura .)
    WRITE           reduce using rule 41 (estatuto -> escritura .)
    READ            reduce using rule 41 (estatuto -> escritura .)
    WHILE           reduce using rule 41 (estatuto -> escritura .)
    FOR             reduce using rule 41 (estatuto -> escritura .)
    KEYDER          reduce using rule 41 (estatuto -> escritura .)


state 57

    (42) estatuto -> llamadafunc .

    ID              reduce using rule 42 (estatuto -> llamadafunc .)
    IF              reduce using rule 42 (estatuto -> llamadafunc .)
    WRITE           reduce using rule 42 (estatuto -> llamadafunc .)
    READ            reduce using rule 42 (estatuto -> llamadafunc .)
    WHILE           reduce using rule 42 (estatuto -> llamadafunc .)
    FOR             reduce using rule 42 (estatuto -> llamadafunc .)
    KEYDER          reduce using rule 42 (estatuto -> llamadafunc .)


state 58

    (43) estatuto -> repeticion .

    ID              reduce using rule 43 (estatuto -> repeticion .)
    IF              reduce using rule 43 (estatuto -> repeticion .)
    WRITE           reduce using rule 43 (estatuto -> repeticion .)
    READ            reduce using rule 43 (estatuto -> repeticion .)
    WHILE           reduce using rule 43 (estatuto -> repeticion .)
    FOR             reduce using rule 43 (estatuto -> repeticion .)
    KEYDER          reduce using rule 43 (estatuto -> repeticion .)
